# HaukenControl

./: .gitignore  CMakeLists.txt  icon.rc  mainwindow.cpp  mainwindow.h  restapi.cpp  restapi.h  stationlist.cpp  stationlist.h
